change the term salt into pepper,

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=test_course
-DB_PASSWORD=P3O.1UVHF.H[EOL[
+DB_PASSWORD=CAk3CtSBUb9cP631
 DB_NAME=test_course
 DB_PORT=3306
-DB_PASSWORD_SALT=BUMBU_LODEH_ENAK_RASANYA
+DB_PASSWORD_PEPPER=l4osJah3danKetumb@rrrr
